fixing extra margin on mobile version.

--- a/css/styles.css
+++ b/css/styles.css
@@ -26,6 +26,7 @@
 html {
   /* 62.5% of 16px = 10px */
   font-size: 62.5%;
+  overflow-x: hidden;
 }
 
 body {
@@ -35,6 +36,7 @@ body {
   letter-spacing: 0.7px;
   color: var(--color-body);
   margin: 0;
+  overflow-x: hidden;
 }
 
 h1,
@@ -108,40 +110,6 @@ a {
 @media screen and (min-width: 868px) {
   .link-arrow {
     font-size: 3rem;
-  }
-}
-
-/* Badges */
-.badge {
-  border-radius: 20px;
-  font-size: 2rem;
-  font-weight: 600;
-  padding: 0.5rem 2rem;
-  white-space: nowrap;
-}
-
-.badge--primary {
-  background: var(--color-primary);
-  color: #fff;
-}
-
-.badge--secondary {
-  background: var(--color-secondary);
-  color: #fff;
-}
-
-.badge--small {
-  font-size: 1.6rem;
-  padding: 0.5rem 1.5rem;
-}
-
-@media screen and (min-width: 1024px) {
-  .badge {
-    font-size: 1.5rem;
-  }
-
-  .badge--small {
-    font-size: 1.2rem;
   }
 }
 
@@ -281,45 +249,7 @@ a {
   }
 }
 
-/* Inputs */
-.input {
-  border-radius: var(--border-radius);
-  border: 1px solid var(--color-border);
-  color: var(--color-headings);
-  font-size: 2rem;
-  outline: 0;
-  padding: 1.5rem 3.5rem;
-}
-
-::placeholder {
-  color: #cdcbd7;
-}
-
-.input-group {
-  border: 1px solid var(--color-border);
-  border-radius: var(--border-radius);
-  display: flex;
-}
-
-.input-group .input {
-  border: 0;
-  flex-grow: 1;
-  padding: 1.5rem 2rem;
-  width: 0;
-}
-
-.input-group .btn {
-  margin: 4px;
-}
-
-@media screen and (min-width: 1024px) {
-  .input {
-    font-size: 1.5rem;
-  }
-}
-
 /* Media Card */
-
 .media-card {
   display: flex;
   flex-direction: column;
@@ -462,6 +392,10 @@ a {
   transition: color 0.3s;
 }
 
+.nav__item:last-of-type {
+  border-bottom: none;
+}
+
 .nav__item > a:hover {
   color: #fff;
 }
@@ -480,6 +414,7 @@ a {
 
 .nav__brand {
   transform: translateY(5px);
+  width: 150px;
 }
 
 .navbar-section {
